--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Oblqo</h1>
+      <h1 class="project-name">
+        <p><img src="https://github.com/fiftin/oblqo/raw/master/Oblqo/oblqo.png" alt="oblqo"></p>
+      </h1>
       <h2 class="project-tagline">Tool for uploading photos to Glacier and sync it with Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">View on GitHub</a>
       <a href="https://github.com/fiftin/oblqo/zipball/master" class="btn">Download .zip</a>
@@ -19,7 +21,6 @@
     </section>
 
     <section class="main-content">
-      <p><img src="https://github.com/fiftin/oblqo/raw/master/Oblqo/oblqo.png" alt="oblqo"></p>
 
 <p>This tool helps you to store and sync your files across multiple storages: local disk, Amazon Glacier, Google Drive. If you lose files from one storage you always can get their from another.</p>
 
@@ -33,6 +34,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
