--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">
-        <p><img src="https://github.com/fiftin/oblqo/raw/master/Oblqo/oblqo.png" alt="oblqo"></p>
+        <p><img src="https://github.com/fiftin/oblqo/raw/master/Oblqo/oblqo-white.png" alt="oblqo"></p>
       </h1>
       <h2 class="project-tagline">Tool for uploading photos to Glacier and sync it with Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">View on GitHub</a>
-      <a href="https://github.com/fiftin/oblqo/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/fiftin/oblqo/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/fiftin/oblqo/releases/download/0.4.8/oblqo-0.4.8-portable.zip"
+         class="btn">Download Portable</a>
+      <a href="https://github.com/fiftin/oblqo/releases/download/0.4.8/oblqo-0.4.8.zip"
+         class="btn">Download Installer for Windows</a>
     </section>
 
     <section class="main-content">
