--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
          class="btn">Download Portable (for Windows, Linux &amp; Mac)</a>
     </section>
     <section class="main-menu">
-      <ul class="menu">
-        <li class="menu-item">
-          <a href="#" onclick="return showPage('home')">Home</a>
+      <ul id="main-menu" class="menu">
+        <li class="menu__item menu__item--active">
+          <a class="menu__item-link menu__item-link" href="#home" onclick="return showPage(this)">Home</a>
         </li>
-        <li class="menu-item">
-          <a href="#" onclick="return showPage('screenshots')">Screenshots</a>
+        <li class="menu__item">
+          <a class="menu__item-link" href="#screenshots" onclick="return showPage(this)">Screenshots</a>
         </li>
       </ul>
     </section>
-    <section class="main-content">
-      <div id="home" class="page page-active">
+    <section id="main-content" class="main-content">
+      <div id="home" class="page page--active">
         <p>
            This tool helps you to store and sync your files across multiple
            storages: local disk, Amazon Glacier, Google Drive. If you lose files
@@ -46,17 +46,54 @@
       </div>
       <div id="screenshots" class="page">
         <p>
-          <img src="" />
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-2.png" />
         </p>
         <p>
-          <img src="" />
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-4.png" />
+        </p>
+        <p>
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
         </p>
       </div>
     </section>
+
     <script type="text/javascript">
-      function showPage(pageId) {
-        var page = document.getElementById(pageId);
-        page.className = "page";
+      window.onscroll = function() {
+        console.log(document.body.scrollTop);
+        if (document.body.scrollTop > 442) {
+          document.getElementById('main-menu').className = "menu menu--fixed";
+        } else {
+          document.getElementById('main-menu').className = "menu";
+        }
+      };
+
+
+      function selectMenuItem(menuItem) {
+        var menuItems = document.getElementById('main-menu').children;
+        for (var i in menuItems) {
+          var item = menuItems[i];
+          if (menuItem === item) {
+            item.className = 'menu__item menu__item--active';
+          } else {
+            item.className = 'menu__item';
+          }
+        }
+      }
+
+      function selectPage(pageId) {
+        var pages = document.getElementById('main-content').children;
+        var activePage = document.getElementById(pageId);
+        for (var i in pages) {
+          var page = pages[i];
+          page.className = 'page';
+        }
+        activePage.className = 'page page--active';
+      }
+
+      function showPage(menuItemLink) {
+        var pageId = menuItemLink.href.match(/#(\w+)$/)[1];
+        selectPage(pageId);
+        selectMenuItem(menuItemLink.parentElement);
       }
     </script>
   </body>
