feat: smooth scrolling

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js"
+            integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
+            crossorigin="anonymous"></script>
   </head>
   <body>
-    <section class="page-header">
+    <section id="page-header" class="page-header">
       <h1 class="project-name">
         <p style="margin-bottom: 0;"><img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-light.png" alt="oblqo"></p>
       </h1>
       <h2 class="project-tagline">Tool for sync your photos and videos with Amazon Glacier and Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">View on GitHub</a>
-   <a href="https://github.com/fiftin/oblqo/releases/download/0.4.8/oblqo-0.4.8.zip"
-      class="btn">Download Installer for Windows</a>
+      <a href="https://github.com/fiftin/oblqo/releases/download/0.4.8/oblqo-0.4.8.zip"
+         class="btn">Download Installer for Windows</a>
       <a href="https://github.com/fiftin/oblqo/releases/download/0.4.8/oblqo-0.4.8-portable.zip"
          class="btn">Download Portable (for Windows, Linux &amp; Mac)</a>
     </section>
+
     <section class="main-menu">
       <ul id="main-menu" class="menu">
         <li class="menu__item menu__item--active">
@@ -31,6 +35,7 @@
         </li>
       </ul>
     </section>
+
     <section id="main-content" class="main-content">
       <div id="home" class="page page--active">
         <p>
@@ -49,24 +54,23 @@
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-2.png" />
         </p>
         <p>
-          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-4.png" />
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
         </p>
         <p>
-          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-4.png" />
         </p>
       </div>
     </section>
-
     <script type="text/javascript">
+
       window.onscroll = function() {
-        console.log(document.body.scrollTop);
-        if (document.body.scrollTop > 442) {
+        var headerHeight = $('#page-header').innerHeight();
+        if (document.body.scrollTop > headerHeight) {
           document.getElementById('main-menu').className = "menu menu--fixed";
         } else {
           document.getElementById('main-menu').className = "menu";
         }
       };
-
 
       function selectMenuItem(menuItem) {
         var menuItems = document.getElementById('main-menu').children;
@@ -95,6 +99,23 @@
         selectPage(pageId);
         selectMenuItem(menuItemLink.parentElement);
       }
+
+      $(function() {
+        // smooth scrolling to anchor
+        $('a[href*="#"]:not([href="#"])').click(function() {
+          if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+            var target = $(this.hash);
+            target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+            if (target.length) {
+              $('html, body').animate({
+                scrollTop: target.offset().top
+              }, 800);
+              return false;
+            }
+          }
+        });
+      });
+
     </script>
   </body>
 </html>
