--- a/index.html
+++ b/index.html
@@ -27,20 +27,30 @@
 
     <section class="main-menu">
       <ul class="menu">
+
         <li class="menu__item menu__item--active">
           <a class="menu__item-link menu__item-link" href="#home" onclick="return showPage(this)">Home</a>
         </li>
         <li class="menu__item">
           <a class="menu__item-link" href="#screenshots" onclick="return showPage(this)">Screenshots</a>
         </li>
+        <li class="menu__item">
+          <a class="menu__item-link" href="https://github.com/fiftin/oblqo/wiki">Docs</a>
+        </li>
+
       </ul>
       <ul id="fixed-menu" class="menu menu--fixed" style="opacity: 0.0; display: none; z-index: -1">
+
         <li class="menu__item menu__item--active">
           <a class="menu__item-link menu__item-link" href="#home" onclick="return showPage(this)">Home</a>
         </li>
         <li class="menu__item">
           <a class="menu__item-link" href="#screenshots" onclick="return showPage(this)">Screenshots</a>
         </li>
+        <li class="menu__item">
+          <a class="menu__item-link" href="https://github.com/fiftin/oblqo/wiki">Docs</a>
+        </li>
+
       </ul>
     </section>
 
@@ -111,7 +121,7 @@
             $('#fixed-menu').hide();
           }
           if (document.body.scrollTop > headerHeight) {
-            $('#fixed-menu').css({ opacity: 0.9, zIndex: 10 });
+            $('#fixed-menu').css({ opacity: 1, zIndex: 10 });
           } else {
             $('#fixed-menu').css({ opacity: 0.0, zIndex: -1 });
           }
