--- a/index.html
+++ b/index.html
@@ -142,8 +142,11 @@
               $('html, body').animate({
                 scrollTop: target.offset().top
               }, 800);
-              var pageId = document.location.href.match(/#(\w+)$/)[1];
-              history.pushState({ pageId: pageId }, document.title, this.href);
+              var hashMatch = document.location.href.match(/#(\w+)$/);
+              if (hashMatch !== null) {
+                var pageId = hashMatch[1];
+                history.pushState({ pageId: pageId }, document.title, this.href);
+              }
               return false;
             }
           }
