--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               $('html, body').animate({
                 scrollTop: target.offset().top
               }, 800);
-              var hashMatch = document.location.href.match(/#(\w+)$/);
+              var hashMatch = this.href.match(/#(\w+)$/);
               if (hashMatch !== null) {
                 var pageId = hashMatch[1];
                 history.pushState({ pageId: pageId }, document.title, this.href);
