feat: screenshot descriptions

--- a/index.html
+++ b/index.html
@@ -71,15 +71,19 @@
       <div id="screenshots" class="page">
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-2.png" />
+          <div class="screenshot-description">File Browsing</div>
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
+          <div class="screenshot-description">File Synchronization</div>
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/image-viewer-2.png" />
+          <div class="screenshot-description">Image Viewer</div>
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/settings-2.png" />
+          <div class="screenshot-description">Connection Settings</div>
         </p>
       </div>
     </section>
