fix: small fixes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
-          <div class="screenshot-description">File Sync with Amazon Glacier</div>
+          <div class="screenshot-description">File Sync with Google Drive</div>
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/image-viewer-2.png" />
