--- a/ru/index.html
+++ b/ru/index.html
@@ -64,16 +64,18 @@
            Вы можете не бояться потерять фотографии на жестком диске вашего
            компьютера, вы всегда сможите востановить их из архива Amazon Glacier,
            надежность которого составляет 99.999%.
-         </p>
+        </p>
         <p>
            Также Oblqo поддереживает множество полезных фич.
            Например вы можете сохранять в Google Drive уменьшенные копии
            фотографий для экономии места, а в Amazon Glacier сохранять
            оригиналы фотографий.
-           <br>
+        </p>
+        <p>
            Или синхронизировать фотографии между разными аккаунтами
            Google Drive.
-           <br>
+        </p>
+        <p>
            Вы можете не хранить фотографии на жеском диске вовсе. Имея
            уменьшенные копии фотографий в Google Drive по неободимости вы
            всегда можете скачать оригинал с Amazon Glacier.
@@ -86,7 +88,7 @@
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
-          <div class="screenshot-description">Синхронизация файлов с Amazon Glacier</div>
+          <div class="screenshot-description">Синхронизация файлов с Google Drive</div>
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/image-viewer-2.png" />
