feat: lang switcher

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body>
     <section id="page-header" class="page-header">
       <h1 class="project-name">
-        <p style="margin-bottom: 0;"><img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-light.png" alt="oblqo"></p>
+        <p style="margin-bottom: 0;">
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-light.png" alt="oblqo">
+        </p>
+        <div class="lang-switcher"><a href="/oblqo/ru">RU</a><div>
       </h1>
       <h2 class="project-tagline">Tool for sync your photos and videos with Amazon Glacier and Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">View on GitHub</a>
