--- a/ru/index.html
+++ b/ru/index.html
@@ -16,7 +16,10 @@
   <body>
     <section id="page-header" class="page-header">
       <h1 class="project-name">
-        <p style="margin-bottom: 0;"><img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-light.png" alt="oblqo"></p>
+        <p style="margin-bottom: 0;">
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-light.png" alt="oblqo">
+        </p>
+        <div class="lang-switcher"><a href="/oblqo/ru">EN</a><div>
       </h1>
       <h2 class="project-tagline">Приложения для сохранения ваших вотографий в Amazon Glacier и Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">Смотреть на GitHub</a>
@@ -70,15 +73,10 @@
            Например вы можете сохранять в Google Drive уменьшенные копии
            фотографий для экономии места, а в Amazon Glacier сохранять
            оригиналы фотографий.
-        </p>
-        <p>
-           Или синхронизировать фотографии между разными аккаунтами
-           Google Drive.
-        </p>
-        <p>
-           Вы можете не хранить фотографии на жеском диске вовсе. Имея
-           уменьшенные копии фотографий в Google Drive по неободимости вы
-           всегда можете скачать оригинал с Amazon Glacier.
+           <br>
+           Или синхронизировать фотографии между разными аккаунтами Google Drive.
+           <br>
+           Или сохранять в Amazon Glacier резервные копии фотографии с телефона.
         </p>
       </div>
       <div id="screenshots" class="page">
