--- a/ru/index.html
+++ b/ru/index.html
@@ -21,7 +21,7 @@
         </p>
         <div class="lang-switcher"><a href="/oblqo/ru">EN</a><div>
       </h1>
-      <h2 class="project-tagline">Приложения для сохранения ваших вотографий в Amazon Glacier и Google Drive</h2>
+      <h2 class="project-tagline">Приложение для сохранения ваших вотографий в Amazon Glacier и Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">Смотреть на GitHub</a>
       <a href="https://github.com/fiftin/oblqo/releases/download/0.4.9/oblqo-0.4.9.zip"
          class="btn">Скачать установщик для Windows</a>
