feat: lang switcher

--- a/ru/index.html
+++ b/ru/index.html
@@ -19,7 +19,7 @@
         <p style="margin-bottom: 0;">
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-light.png" alt="oblqo">
         </p>
-        <div class="lang-switcher"><a href="/oblqo/ru">EN</a><div>
+        <div class="lang-switcher"><a href="/oblqo">EN</a><div>
       </h1>
       <h2 class="project-tagline">Приложение для сохранения ваших вотографий в Amazon Glacier и Google Drive</h2>
       <a href="https://github.com/fiftin/oblqo" class="btn">Смотреть на GitHub</a>
