--- a/ru/index.html
+++ b/ru/index.html
@@ -64,19 +64,14 @@
            Oblqo поможет держать ваши фотографии в сохранности благодаря
            синхронизации их на разных хранилищах - на жестком диске компьютера,
            в архиве Amazon Glaicer и на облачном диске Google Drive.
-           Вы можете не бояться потерять фотографии на жестком диске вашего
-           компьютера, вы всегда сможите востановить их из архива Amazon Glacier,
-           надежность которого составляет 99.999%.
         </p>
         <p>
-           Также Oblqo поддереживает множество полезных фич.
+           Oblqo поддереживает множество полезных фич.
            Например вы можете сохранять в Google Drive уменьшенные копии
            фотографий для экономии места, а в Amazon Glacier сохранять
-           оригиналы фотографий.
-           <br>
-           Или синхронизировать фотографии между разными аккаунтами Google Drive.
-           <br>
-           Или сохранять в Amazon Glacier резервные копии фотографии с телефона.
+           оригиналы фотографий. Или синхронизировать фотографии между
+           разными аккаунтами Google Drive. Или сохранять в Amazon Glacier
+           резервные копии фотографии с телефона.
         </p>
       </div>
       <div id="screenshots" class="page">
