--- a/ru/index.html
+++ b/ru/index.html
@@ -66,12 +66,16 @@
            в архиве Amazon Glaicer и на облачном диске Google Drive.
         </p>
         <p>
-           Oblqo поддереживает множество полезных фич.
-           Например вы можете сохранять в Google Drive уменьшенные копии
-           фотографий для экономии места, а в Amazon Glacier сохранять
-           оригиналы фотографий. Или синхронизировать фотографии между
-           разными аккаунтами Google Drive. Или сохранять в Amazon Glacier
-           резервные копии фотографии с телефона.
+           Oblqo поддереживает несколько полезных фич:
+           <ul>
+             <li>
+               позволяет сохранять в Google Drive уменьшенные копии
+               фотографий для экономии места, а в Amazon Glacier сохранять
+               оригиналы фотографий.
+             </li>
+             <li>Cинхронизировать фотографии между разными аккаунтами Google Drive.</li>
+             <li>Или сохранять в Amazon Glacier резервные копии фотографии с телефона.</li>
+           </ul>
         </p>
       </div>
       <div id="screenshots" class="page">
