feat: ubuntu screen

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/settings-2.png" />
           <div class="screenshot-description">Connection Settings</div>
         </p>
+        <p>
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/ubuntu-screen.png" />
+          <div class="screenshot-description">Under Ubuntu</div>
+        </p>
       </div>
     </section>
     <script type="text/javascript">
