--- a/ru/index.html
+++ b/ru/index.html
@@ -95,6 +95,10 @@
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/settings-2.png" />
           <div class="screenshot-description">Настройка подключения</div>
         </p>
+        <p>
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/ubuntu-screen.png" />
+          <div class="screenshot-description">Под Ubuntu</div>
+        </p>
       </div>
     </section>
     <script type="text/javascript">
