--- a/ru/index.html
+++ b/ru/index.html
@@ -74,7 +74,7 @@
                оригиналы фотографий.
              </li>
              <li>Cинхронизировать фотографии между разными аккаунтами Google Drive.</li>
-             <li>Или сохранять в Amazon Glacier резервные копии фотографии с телефона.</li>
+             <li>Сохранять в Amazon Glacier резервные копии фотографии с телефона.</li>
            </ul>
         </p>
       </div>
