feat: Russian screenshots

--- a/ru/index.html
+++ b/ru/index.html
@@ -80,19 +80,15 @@
       </div>
       <div id="screenshots" class="page">
         <p>
-          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-2.png" />
-          <div class="screenshot-description">Простотр файлов</div>
-        </p>
-        <p>
-          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/oblqo-screen-6.png" />
-          <div class="screenshot-description">Синхронизация файлов с Google Drive</div>
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/ru/screen-1.png" />
+          <div class="screenshot-description">Скачивание файлов из архива</div>
         </p>
         <p>
           <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/image-viewer-2.png" />
           <div class="screenshot-description">Просмотр фотографий</div>
         </p>
         <p>
-          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/settings-2.png" />
+          <img src="https://raw.githubusercontent.com/fiftin/oblqo/gh-pages/ru/settings.png" />
           <div class="screenshot-description">Настройка подключения</div>
         </p>
         <p>
